--- a/ITIL/Module-2/1.md
+++ b/ITIL/Module-2/1.md
@@ -10,3 +10,28 @@ Service value system
 
   The key inputs to the SVS are opportunitie and demand . opportunity represent option or possiblity value for stake holders or otherwise improve the organization where as demand is the need or desire for product and  service among internal and external customer.
 
+## Discussion on the core component of SVS -
+
+## 1- guiding principles
+
+Recommmendation that can guide an organization in all circumstances , regardless of changes in it's goal, strategies, type of work or management structure.
+## 2- Governance  
+
+Goverance mean how an organization is directed and controlled?
+
+## Service value chanin
+
+A set on interconnected acitivity that an organization peform to deliver a valuable product or service to its consumer and facilitate value relization
+
+## Practices:
+
+set of organization resource designed for performing work or accomplishing an object 
+
+## Continual improvement 
+
+Continual improvement is a recurring organization activity performed at all levels to insure that an organization's performance meet stakeholder's expectations.
+ITIL 4 support continual improvement with the ITIL continual model
+
+- ITIL service valu chain provide an operatin model for the creating delivery   , and continual improvement of services.
+- The service value chain is flexible enough to be adapted to multiple approach,including DevOps and centralized  IT, to address the need of multimodel service management
+- The adaptability of the value chanin enable organization to react to the changind demands of their stakeholders in the most efficient way.
