--- a/ITIL/Module-2/1.md
+++ b/ITIL/Module-2/1.md
@@ -35,3 +35,46 @@ ITIL 4 support continual improvement with the ITIL continual model
 - ITIL service valu chain provide an operatin model for the creating delivery   , and continual improvement of services.
 - The service value chain is flexible enough to be adapted to multiple approach,including DevOps and centralized  IT, to address the need of multimodel service management
 - The adaptability of the value chanin enable organization to react to the changind demands of their stakeholders in the most efficient way.
+
+## The 4th Dimension Model -
+
+![image](https://github.com/user-attachments/assets/3867a605-624e-4a3b-93ed-ed832d94de4f)
+
+![image](https://github.com/user-attachments/assets/6c2ff3a1-016e-4383-a223-3711b54162b9)
+
+![image](https://github.com/user-attachments/assets/4d872068-7a63-4138-8418-adf2faf59cc3)
+
+![image](https://github.com/user-attachments/assets/24a9a9f8-4b6c-4baf-a795-b9eb19a0531f)
+
+![image](https://github.com/user-attachments/assets/339daacf-441a-4108-8209-1795a9a2be37)
+
+
+
+In ITIL 4, PESTLE is a framework used to evaluate how external factors impact the four dimensions of service management:
+You can see in below digram-
+
+PESTLE means political, economic, social, technological, legal and environmental factors impacting business operations. These are the big-picture issues that cause business disruption. ITIL 4 lays its PESTLE framework over the four-dimensional model to show how those outside factors intersect with the business.
+
+![image](https://github.com/user-attachments/assets/21e18dfb-57db-4844-848c-018c00d7e210)
+
+
+Failing to address all 4th dimensions properly may result in services becoming undeliverable.
+
+Example-
+
+Can lead to wastful work 
+
+Duplication of effort 
+
+work that conflict with what is being done elsewhere in the  organization equally ignoring the partners and suplliers dimention could mean that oursourced services are misaligned with the need of the organization 
+
+- The 4th fimensions don't have short boundaries and many overlap . They will sometime intract and unpredictable ways, depending on the level of comlexity and uncertainity in which an organization operates.
+
+
+
+
+
+
+
+
+
